force-app/main/default/objects/Application_Form_Configuration__c/Application_Form_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>For Fidem application form and related web services data</description>
    <label>Application Form Configuration</label>
</CustomObject>