force-app/main/default/objects/Application_Form_Configuration__c/fields/AML_Member_Code__c.field-meta.xml
<CustomField>
    <fullName>AML_Member_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AML Member Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>