force-app/main/default/objects/Application_Form_Configuration__c/fields/AML_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>AML_Product_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AML Product Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>