force-app/main/default/objects/Application_Form_Configuration__c/fields/AML_Route_Type__c.field-meta.xml
<CustomField>
    <fullName>AML_Route_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AML Route Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>