force-app/main/default/objects/Application_Form_Configuration__c/fields/AML_User_Reference__c.field-meta.xml
<CustomField>
    <fullName>AML_User_Reference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AML User Reference</label>
    <length>40</length>
    <type>Text</type>
</CustomField>