force-app/main/default/objects/Application_Form_Configuration__c/fields/Auth_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Auth_Endpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Auth Endpoint</label>
    <type>Url</type>
</CustomField>