force-app/main/default/objects/Application_Form_Configuration__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Secret</label>
    <length>200</length>
    <type>Text</type>
</CustomField>