force-app/main/default/objects/Application_Form_Configuration__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Endpoint</label>
    <length>200</length>
    <type>Text</type>
</CustomField>