force-app/main/default/objects/Application_Form_Configuration__c/fields/Error_Text__c.field-meta.xml
<CustomField>
    <fullName>Error_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Text</label>
    <length>200</length>
    <type>Text</type>
</CustomField>