force-app/main/default/objects/Application_Form_Configuration__c/fields/FFR__c.field-meta.xml
<CustomField>
    <fullName>FFR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FFR</label>
    <length>20</length>
    <type>Text</type>
</CustomField>