force-app/main/default/objects/Application_Form_Configuration__c/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Grant Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>