force-app/main/default/objects/Application_Form_Configuration__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Language</label>
    <length>20</length>
    <type>Text</type>
</CustomField>