force-app/main/default/objects/Application_Form_Configuration__c/fields/Owning_Bureau__c.field-meta.xml
<CustomField>
    <fullName>Owning_Bureau__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owning Bureau</label>
    <length>20</length>
    <type>Text</type>
</CustomField>