force-app/main/default/objects/Application_Form_Configuration__c/fields/RouteDest__c.field-meta.xml
<CustomField>
    <fullName>RouteDest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RouteDest</label>
    <length>20</length>
    <type>Text</type>
</CustomField>