force-app/main/default/objects/Application_Form_Configuration__c/fields/RouteType__c.field-meta.xml
<CustomField>
    <fullName>RouteType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RouteType</label>
    <length>30</length>
    <type>Text</type>
</CustomField>