force-app/main/default/objects/Application_Form_Configuration__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scope</label>
    <length>200</length>
    <type>Text</type>
</CustomField>