force-app/main/default/objects/Application_Form_Configuration__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Summary</label>
    <length>30</length>
    <type>Text</type>
</CustomField>