force-app/main/default/objects/Application_Form_Configuration__c/fields/Timeout_for_Webservice__c.field-meta.xml
<CustomField>
    <fullName>Timeout_for_Webservice__c</fullName>
    <description>Timeout value for the webservice</description>
    <inlineHelpText>Timeout value for the webservice</inlineHelpText>
    <label>Timeout for Webservice</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>