force-app/main/default/objects/Application_Form_Configuration__c/fields/TradeMop__c.field-meta.xml
<CustomField>
    <fullName>TradeMop__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TradeMop</label>
    <length>30</length>
    <type>Text</type>
</CustomField>