force-app/main/default/objects/Application_Form_Configuration__c/fields/UserReference__c.field-meta.xml
<CustomField>
    <fullName>UserReference__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UserReference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>